<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_person"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:hint="@string/placeholder_name"
            android:textColorHint="#000000"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_surname"
            android:hint="@string/placeholder_surname"
            android:textColorHint="#000000"
            android:singleLine="true"
            android:layout_marginBottom="190dp"/>
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            android:id="@+id/edit_button1"
            android:layout_marginBottom="5dp"
            android:textColor="#ffffff"
            android:background="#000000" />
    </LinearLayout>

</LinearLayout>